# internal/modules/user/models.go
@@ -20,21 +20,22 @@ type User struct {
 }
 
 type UserProfile struct {
-	ID                    primitive.ObjectID  `bson:"_id,omitempty" json:"id"`
-	UserID                primitive.ObjectID  `bson:"user_id" json:"user_id"`
-	Phone                 string              `bson:"phone" json:"phone"`
-	TelegramId            string              `bson:"telegram_id" json:"telegram_id"`
-	TelegramVerified      bool                `bson:"telegram_verified" json:"telegram_verified"`
-	BaseSalary            float64             `bson:"base_salary" json:"base_salary"`
-	SalaryCycle           string              `bson:"salary_cycle" json:"salary_cycle" enums:"daily,weekly,monthly" default:"monthly"`
-	SalaryDay             int                 `bson:"salary_day" json:"salary_day"`
-	PayCurrency           string              `bson:"pay_currency" json:"pay_currency" enums:"IDR,USD" default:"IDR"`
-	Lang                  string              `bson:"lang" json:"lang" enums:"id,en" default:"id"`
-	AutoInputPayroll      bool                `bson:"auto_input_payroll" json:"auto_input_payroll"`
-	DefaultUserPlatformID *primitive.ObjectID `bson:"default_user_platform_id,omitempty" json:"default_user_platform_id,omitempty"`
-	IsActive              bool                `bson:"is_active" json:"is_active"`
-	CreatedAt             time.Time           `bson:"created_at" json:"created_at"`
-	UpdatedAt             time.Time           `bson:"updated_at" json:"updated_at"`
+	ID                       primitive.ObjectID  `bson:"_id,omitempty" json:"id"`
+	UserID                   primitive.ObjectID  `bson:"user_id" json:"user_id"`
+	Phone                    string              `bson:"phone" json:"phone"`
+	TelegramId               string              `bson:"telegram_id" json:"telegram_id"`
+	TelegramVerified         bool                `bson:"telegram_verified" json:"telegram_verified"`
+	BaseSalary               float64             `bson:"base_salary" json:"base_salary"`
+	SalaryCycle              string              `bson:"salary_cycle" json:"salary_cycle" enums:"daily,weekly,monthly" default:"monthly"`
+	SalaryDay                int                 `bson:"salary_day" json:"salary_day"`
+	PayCurrency              string              `bson:"pay_currency" json:"pay_currency" enums:"IDR,USD" default:"IDR"`
+	Lang                     string              `bson:"lang" json:"lang" enums:"id,en" default:"id"`
+	AutoInputPayroll         bool                `bson:"auto_input_payroll" json:"auto_input_payroll"`
+	DefaultUserPlatformID    *primitive.ObjectID `bson:"default_user_platform_id,omitempty" json:"default_user_platform_id,omitempty"`
+	IsActive                 bool                `bson:"is_active" json:"is_active"`
+	CreatedAt                time.Time           `bson:"created_at" json:"created_at"`
+	UpdatedAt                time.Time           `bson:"updated_at" json:"updated_at"`
+	TelegramIntegrationAlert bool                `bson:"telegram_integration_alert" json:"telegram_integration_alert" default:"false"`
 }
 
 // Role constants
